--- a/.env
+++ b/.env
@@ -24,7 +24,7 @@ APP_SECRET=8fc7c284c55cedd609a026bef77db997
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL="mysql://root:@127.0.0.1:3306/SkanderCommandePanier"
+DATABASE_URL="mysql://root:@127.0.0.1:3306/UserAssil"
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
