Implementation des metiers (mailer bundle + ban function + reset password + email de verification)
Assil Maalel

--- a/.env
+++ b/.env
@@ -38,3 +38,8 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###> symfony/mailer ###
 # MAILER_DSN=null://null
 ###< symfony/mailer ###
+
+###> symfony/google-mailer ###
+# Gmail SHOULD NOT be used on production, use it in development only.
+MAILER_DSN=gmail://assil.maalel@esprit.tn:06999239@default
+###< symfony/google-mailer ###
