Implementation des metiers
Mail + Tri + Recherche + SMS

--- a/JAVA/nbproject/project.properties
+++ b/JAVA/nbproject/project.properties
@@ -27,15 +27,41 @@ dist.dir=dist
 dist.jar=${dist.dir}/shoppingcart.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.itextpdf-5.5.9.jar=C:\\Users\\paWr\\Desktop\\GestionCommande\\itextpdf-5.5.9.jar
 file.reference.javax.mail.jar=dependencies/javax.mail.jar
 file.reference.mysql-connector.jar=dependencies/mysql-connector.jar
 file.reference.TrayTester.jar=dependencies/TrayTester.jar
+file.reference.twilio-8.8.0.jar=C:\\Users\\paWr\\Desktop\\GestionCommande\\twilio-8.8.0.jar
+file.reference.twilio-8.8.0.jar-1=dist\\lib\\twilio-8.8.0.jar
+file.reference.twilio-8.8.0.jar-2=C:\\Users\\skand\\Desktop\\twilio-8.8.0.jar
+file.reference.twilio-8.9.0-jar-with-dependencies.jar=C:\\Users\\paWr\\Desktop\\GestionCommande\\twilio-8.9.0-jar-with-dependencies.jar
+file.reference.twilio-8.9.0-jar-with-dependencies.jar-1=dist\\lib\\twilio-8.9.0-jar-with-dependencies.jar
+file.reference.twilio-8.9.0-jar-with-dependencies.jar-2=C:\\Users\\skand\\Desktop\\twilio-8.9.0-jar-with-dependencies.jar
+file.reference.twilio-8.9.0-javadoc.jar=C:\\Users\\paWr\\Desktop\\GestionCommande\\twilio-8.9.0-javadoc.jar
+file.reference.twilio-8.9.0-javadoc.jar-1=dist\\lib\\twilio-8.9.0-javadoc.jar
+file.reference.twilio-8.9.0-javadoc.jar-2=C:\\Users\\skand\\Desktop\\twilio-8.9.0-javadoc.jar
+file.reference.twilio-9.2.4-jar-with-dependencies.jar=C:\\Users\\paWr\\Desktop\\GestionCommande\\twilio-9.2.4-jar-with-dependencies.jar
+file.reference.twilio-9.2.4-jar-with-dependencies.jar-1=dist\\lib\\twilio-9.2.4-jar-with-dependencies.jar
+file.reference.twilio-9.2.4-jar-with-dependencies.jar-2=C:\\Users\\skand\\Desktop\\twilio-9.2.4-jar-with-dependencies.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.javax.mail.jar}:\
     ${file.reference.mysql-connector.jar}:\
-    ${file.reference.TrayTester.jar}
+    ${file.reference.TrayTester.jar}:\
+    ${file.reference.itextpdf-5.5.9.jar}:\
+    ${file.reference.twilio-8.8.0.jar}:\
+    ${file.reference.twilio-8.9.0-jar-with-dependencies.jar}:\
+    ${file.reference.twilio-8.9.0-javadoc.jar}:\
+    ${file.reference.twilio-9.2.4-jar-with-dependencies.jar}:\
+    ${file.reference.twilio-8.8.0.jar-1}:\
+    ${file.reference.twilio-8.9.0-jar-with-dependencies.jar-1}:\
+    ${file.reference.twilio-8.9.0-javadoc.jar-1}:\
+    ${file.reference.twilio-9.2.4-jar-with-dependencies.jar-1}:\
+    ${file.reference.twilio-8.8.0.jar-2}:\
+    ${file.reference.twilio-8.9.0-jar-with-dependencies.jar-2}:\
+    ${file.reference.twilio-8.9.0-javadoc.jar-2}:\
+    ${file.reference.twilio-9.2.4-jar-with-dependencies.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
